<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.rmen.android.palidamuerte.CategoriesActivity" >

    <item
        android:id="@+id/action_prev"
        android:enabled="false"
        android:icon="@drawable/ic_action_prev"
        android:showAsAction="ifRoom"
        android:title="@string/action_prev"
        android:visible="false"/>
    <item
        android:id="@+id/action_next"
        android:enabled="false"
        android:icon="@drawable/ic_action_next"
        android:showAsAction="ifRoom"
        android:title="@string/action_next"
        android:visible="false"/>
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>

</menu>