<!--
  Copyright 2014 Carmen Alvarez
 
  This file is part of Pálida Muerte.
 
  Pálida Muerte is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
 
  Pálida Muerte is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Pálida Muerte. If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gray_gradient" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ca.rmen.android.palidamuerte.app.about.AboutFragment" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitStart"
            android:src="@drawable/cyberscooty_stylized_floral_border_top_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitStart"
            android:src="@drawable/cyberscooty_stylized_floral_border_top_right" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:scaleType="fitStart"
            android:src="@drawable/cyberscooty_stylized_floral_border_bottom_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitStart"
            android:src="@drawable/cyberscooty_stylized_floral_border_bottom_right" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="32dp"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearancePoemDetailTitle" />

        <ImageView
            android:id="@+id/photo_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_name"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:src="@drawable/paco697a" />

        <TextView
            android:id="@+id/author_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photo_author"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/author_date"
            android:textAppearance="@style/TextAppearancePoemTypeAndNumber" />

        <TextView
            android:id="@+id/author_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_date"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/author_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorLink="#D8CCDD" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_description"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/cyberscooty_stylized_plant_separation"
            android:scaleType="center" />

        <TextView
            android:id="@+id/current_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:text="@string/current_song"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_song"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/cyberscooty_stylized_plant_separation"
            android:scaleType="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/app_name_and_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/app_name_and_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name_and_version"
            android:autoLink="email"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/credits_app"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#D8CCDD" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/credits_app"
            android:paddingBottom="48dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <WebView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null" />
        </FrameLayout>
    </RelativeLayout>

</ScrollView>